--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@web3-react/walletlink-connector": "^6.1.1",
     "async": "^3.2.0",
     "flux": "^3.1.3",
+    "humanize-duration": "^3.23.1",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^4.3.1",
     "ipfs-react-router": "^0.2.2",
