--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@ethersproject/contracts": "^5.0.4",
     "@ethersproject/providers": "^5.0.5",
+    "@ethersproject/solidity": "^5.0.4",
     "@ethersproject/units": "^5.0.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@uniswap/sdk": "^3.0.3",
     "@web3-react/authereum-connector": "^6.1.1",
     "@web3-react/core": "^6.1.1",
     "@web3-react/fortmatic-connector": "^6.0.9",
