--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^9.0.10",
+    "react-pdf": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "request-promise": "^4.2.6",
