--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async": "^3.2.0",
     "ethjs-ens": "^2.0.1",
     "flux": "^3.1.3",
+    "humanize-duration": "^3.24.0",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^4.3.1",
     "ipfs-react-router": "^0.2.2",
